Added Semantic Elements

--- a/Index.html
+++ b/Index.html
@@ -53,7 +53,7 @@
             <span class="page-tag">Journey of a thousand miles begins with one step</span>
         </div>
         <div class="page-display-middle page-center">
-            <span class="page-text-white" style="font-size: 90px; font-family: 'Noto Serif Tamil', serif">பயணம்</span>
+            <span class="page-text-white" style="font-size: 90px; font-family: 'Noto Serif Tamil', serif"><b>பயணம்</b></span>
         </div>
         <div class="page-display-bottomright page-center page-padding-large">
             <span class="page-text-white">Rohtang Pass, Himachal Pradesh</span>
@@ -62,6 +62,7 @@
 
     <div class="page-sand page-grayscale page-large">
         <div class="page-container" id="book">
+            <section class="page-feature-search">
             <div class="page-content" style="max-width: 800px">
                 <br>
                         <div class="page-bar page-black">
@@ -124,8 +125,10 @@
                             </p>
                         </div>
             </div>
+        </section>
         </div>
         <div class="page-container" id="packages">
+            <section class="page-feature-packages">
             <div class="page-content" style="max-width: 1000px">
                 <div class="page-row-padding">
                     <br><br>
@@ -193,8 +196,8 @@
                       </div>
                     </div>
                   </div>
-
             </div>
+            </section>
 
         </div>
         <div class="page-container" id="contact" style="padding-bottom: 32px">
@@ -233,7 +236,7 @@
     </div>
 
     <footer class="page-center page-light-grey page-padding-48 page-large">
-        <p>Made for Net-Centric Programming Course By Sudharshan Balaji</p>
+        <p>Made for Net-Centric Programming Course By <address><a href="bsudharshan2001@gmail.com">Sudharshan Balaji</a></address></p>
     </footer>
     <script src="HomePage-Script.js"></script>
 </body>
